# cpputils

./: .gitignore  AlignedBuffer_8h_source.html  Alignment_8h_source.html  CMakeLists.txt  CMakePresets.json  Doxyfile  InterprocessMutexLockGuard_8h_source.html  InterprocessMutex_8h_source.html  README.md  RangeMeter_8h_source.html  SharedLibraryLoader_8h_source.html  SharedMemory_8h_source.html  SmoothValue_8h_source.html  Timer_8h_source.html  WaitFreeCounter_8h_source.html  WriteSafeLockFree_8h_source.html  WriteUnsafeLockFree_8h_source.html  annotated.html  annotated_dup.js  classCounter-members.html  classCounter.html  classcpputils_1_1ImmutableTimer-members.html  classcpputils_1_1ImmutableTimer.html  classcpputils_1_1InterprocessMutex-members.html  classcpputils_1_1InterprocessMutex.html  classcpputils_1_1InterprocessMutexLockGuard-members.html  classcpputils_1_1InterprocessMutexLockGuard.html  classcpputils_1_1ResettableTimer-members.html  classcpputils_1_1ResettableTimer.html  classcpputils_1_1ScopePrintTimer-members.html  classcpputils_1_1ScopePrintTimer.html  classcpputils_1_1SharedLibraryLoader.html  classcpputils_1_1SharedMemory-members.html  classcpputils_1_1SharedMemory.html  classcpputils_1_1WriteSafeLockFree-members.html  classcpputils_1_1WriteSafeLockFree.html  classcpputils_1_1WriteUnsafeLockFree-members.html  classcpputils_1_1WriteUnsafeLockFree.html  classcpputils_1_1math_1_1SmoothValue-members.html  classcpputils_1_1math_1_1SmoothValue.html  (+57 more)
InterprocessNamedMutex/: InterprocessNamedMutex.h
Producer/: Producer.vcxproj  Producer.vcxproj.filters  main.cpp
Producer/include/: OpenGLApplication.h  directx_utils.h
Producer/src/: OpenGLApplication.cpp  main.cpp
SharedMemory/: SharedMemory.h
StreamCopier/: StreamCopier.cpp  StreamCopier.h  StreamCopier.sln  StreamCopier.vcxproj  StreamCopier.vcxproj.filters  StreamTexture.cpp  StreamTexture.h  main.cpp
include/cpputils/: Alignment.h  InterprocessMutex.h  InterprocessMutexLockGuard.h  RangeMeter.h  SharedLibraryLoader.h  SharedMemory.h  Timer.h  WaitFreeCounter.h  WriteSafeLockFree.h  WriteUnsafeLockFree.h  languageChecking.h
include/cpputils/math/: SmoothValue.h  easing.h  mathConcepts.h
include/cpputils/windows/: AlignedBuffer.h  credential_utils.h  dwm.h  handle_utils.h  selectors.h  simpleDirectIo.h  terminal.h  window_utils.h
premake-templates/: premake5.lua
projects/Timer/: .editorconfig
projects/Timer/include/: Timer.h
projects/Timer/src/: Timer.cpp  main.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  concepts_0.js  searchdata.js
utils/include/: Timer.h
utils/src/: main.cpp
